--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">@android:color/white</color>
-    <color name="colorPrimaryDark">@android:color/white</color>
+    <color name="colorPrimaryDark">#FAFAFA</color>
     <color name="colorAccent">#FAFAFA</color>
     <color name="colorBackground">#E7E7E8</color>
     <color name="button_grey">#757575</color>
