Add action record.
Signed-off-by: antiless <antiless@163.com>

--- a/app/src/main/res/layout/item_block.xml
+++ b/app/src/main/res/layout/item_block.xml
@@ -2,5 +2,8 @@
 <android.support.v7.widget.CardView android:layout_height="72dp"
     android:layout_width="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_margin="8dp">
+    android:layout_marginTop="@dimen/md_space"
+    android:layout_marginStart="@dimen/md_keylines"
+    android:layout_marginEnd="@dimen/md_keylines"
+    >
 </android.support.v7.widget.CardView>
