--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -6,4 +6,9 @@
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+
+    <item android:id="@+id/action_record"
+        android:title="@string/action_record"
+        android:icon="@drawable/ic_play_arrow_black_24dp"
+        app:showAsAction="ifRoom"/>
 </menu>
