First version of gallery timeline.
Signed-off-by: lixindong <auv1107@gmail.com>

--- a/app/src/main/res/layout/item_picture.xml
+++ b/app/src/main/res/layout/item_picture.xml
@@ -10,11 +10,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scaleType="matrix"
-        android:layout_margin="8dp"
         app:base="widthBased"
-        app:widthWeight="1"
         app:heightWeight="1"
         app:radius="3dp"
         app:strokeColor="@android:color/black"
-        />
+        app:widthWeight="1" />
 </FrameLayout>
